2009-02-25  Fabian Affolter <fabian@bernewireless.net>

	* po/de.po: Updated translations.

2009-02-25  Taylon Silmer Lacerda Silva <taylonsilva@gmail.com>

	* po/pt_BR.po: Updated translations.

2009-02-25  Domingo Becker <domingobecker@gmail.com>

	* po/es.po: Updated translations.

2009-02-20  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_limits/limits.conf.5.xml: Document that the kernel
	can refuse values out of range for the local system.
	* modules/pam_limits/pam_limits.c (setup_limits): Log if setrlimit
	fails.

2009-02-18  Thorsten Kukuk  <kukuk@thkukuk.de>

	* libpam/pam_password.c (pam_chauthtok): Make sure applications
	don't set internal flags.

2009-02-17  Thorsten Kukuk  <kukuk@thkukuk.de>

	* doc/man/pam_sm_chauthtok.3.xml: Document that sufficient
	can break the PRELIM_CHECK chain.

	* libpam/pam_dispatch.c: Don't freeze chain for chauthtok
	[bugzilla.novell.com#470337]

2009-02-11  Daniel Nylander <po@danielnylander.se>

	* po/sv.po: Updated translations.

2009-01-29  Thorsten Kukuk  <kukuk@thkukuk.de>

	* doc/man/pam_sm_setcred.3.xml: Document PAM_ESTABLISH_CRED.

2009-01-19  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_mkhomedir/Makefile.am: Add mkhomedir_helper.
	* modules/pam_mkhomedir/mkhomedir_helper.8.xml: New file. Manual page
	for mkhomedir_helper.
	* modules/pam_mkhomedir/mkhomedir_helper.c: New file. Source
	for mkhomedir_helper. Most of the code moved from pam_mkhomedir.c.
	* modules/pam_mkhomedir/pam_mkhomedir.c (_pam_parse): Do not convert umask
	to integer.
	(rec_mkdir): Moved to mkhomedir_helper.c.
	(create_homedir): Just exec the helper.
	(pam_sm_open_session): Improve logging.

2009-01-19  Daniel Cabrera <h.daniel.cabrera@gmail.com>

	* po/es.po: Updated translations.

2009-01-14  Thorsten Kukuk  <kukuk@thkukuk.de>

	* po/de.po: Updated translations.

2009-01-07  Piotr Drąg <piotrdrag@gmail.com>

	* po/pl.po: Updated translations.

2008-12-23  Piotr Drąg <piotrdrag@gmail.com>

	* po/pl.po: Updated translations.
